Velg visning bedre beskrivelse

--- a/twig/NokkeltallNorge/tilpass.html.twig
+++ b/twig/NokkeltallNorge/tilpass.html.twig
@@ -1,4 +1,4 @@
-<div class="col-12 col-sm-6 col-md-4">
+<div class="col-12 col-sm-4 col-md-4">
 	<ol class="list-group">
 		<li class="list-group-item list-group-title">
 			<h4>Velg sesong</h4>
@@ -10,6 +10,6 @@
 	</ol>
 </div>
 
-<div class="col-12 col-sm-6 col-md-4">
-	{% include "options.html.twig" with {id: 'arrangement_type', title: 'Velg visning:', start: 'festival', options: [{id: 'festival', title: 'Festival'},{id: 'workshop', title: 'Workshop (kurs)'}]} %}
+<div class="col-12 col-sm-8 col-md-5">
+	{% include "options.html.twig" with {id: 'arrangement_type', title: 'Velg visning:', start: 'festival', options: [{id: 'festival', title: 'Mønstring / Festival'},{id: 'workshop', title: 'Workshop / Kurs / Treff'}]} %}
 </div>
