Fiks: når ingen skal overnatte fra et fylke i festivalen for en dag

--- a/twig/OvernattingLandsbyen/rapport.html.twig
+++ b/twig/OvernattingLandsbyen/rapport.html.twig
@@ -14,7 +14,7 @@
         <tbody>
             <tr class="ledere-tr">
                 <td>{{ fylker[key].getNavn() }}</td>
-                <td><b>{{ data['total'] }}</b> leder{{ data['total'] > 1 ? 'e' : '' }} overnatter</td>
+                <td><b>{{ data['total'] ? data['total'] : 0 }}</b> leder{{ data['total'] > 1 ? 'e' : '' }} overnatter</td>
 
                 <td>{{ data['hovedLedere'].getNavn() }} - {{ data['hovedLedere'].getMobil() }}</td>
             </tr>
