--- a/twig/OvernattingLandsbyen/rapport.html.twig
+++ b/twig/OvernattingLandsbyen/rapport.html.twig
@@ -1,6 +1,6 @@
 {% for natt in netter %}
 <div>
-<h5>Natt: {{ natt['natt']|date('d.m.yy') }}:</h5>
+<h5>Natt: {{ natt['natt']|date('d.m.Y') }}:</h5>
 <table class="table overnatting-oversikt" >
         <thead>
             <tr>
