--- a/twig/LedereOversikt/rapport.html.twig
+++ b/twig/LedereOversikt/rapport.html.twig
@@ -34,6 +34,6 @@
         margin-bottom: 50px;
     }
     .ledere-tr td {
-        width: {{ 100/6 }}% !important;
+        width: 16.66% !important;
     }
 </style>
