Info tekst og filtrering ledere som overnatter bare i landsbyen

--- a/twig/OvernattingLandsbyen/rapport.html.twig
+++ b/twig/OvernattingLandsbyen/rapport.html.twig
@@ -5,7 +5,7 @@
             <thead>
                 <tr>
                     <th scope="col">Fylke</th>
-                    <th scope="col">Leder som overnatter</th>
+                    <th scope="col">Ledere som overnatter i landsbyen</th>
                     <th scope="col">Ansvarlig leder</th>
                 </tr>
             </thead>
