Filtrer basert på fylker
UKM landsfestivalen - alle innslag sortert på fylker

--- a/twig/AlleInnslag/tilpass.html.twig
+++ b/twig/AlleInnslag/tilpass.html.twig
@@ -130,4 +130,10 @@
 			{% endblock %}
 		{% endembed %}
 	</div>
+
+	<div id="velgFylker" class="row" style="display: none">
+		{% include "AlleInnslag/Tilpass/fylker.html.twig" %}
+	</div>
+
 </div>
+
