Landsfestivalen: intoleranser rapport gruppert etter fylker
Intoleranser og allergier rapporten er tilpasset for å gruppere deltakere i mengden etter fylke når det rapporten kalles fra landsfestivalen.

--- a/twig/Intoleranser/person.html.twig
+++ b/twig/Intoleranser/person.html.twig
@@ -1,7 +1,7 @@
 {% extends "Components/Person/element.html.twig" %}
 
 {% block content %}
-    <b>{{ person.getNavn() }} </b>
+    <b>{{ person.getNavn() }}</b> ({{ person.getMobil() }})
     -
     {{person.getSensitivt().getIntoleranse().getListeHuman(true)}}
     {% if person.getSensitivt().getIntoleranse().getTekst() is not empty %}
