--- a/twig/TotaloverisktVideresendingFylke/rapport.html.twig
+++ b/twig/TotaloverisktVideresendingFylke/rapport.html.twig
@@ -37,7 +37,7 @@
     {% endfor %}
 
     {# TOTALOVERSIKT FOR FYLKE #}
-    <h3 class="arrangement-oversikt">Totaloversikt i fylke</h3>
+    <h3 class="arrangement-oversikt">Totaloversikt</h3>
      <table class="table total-oversikt total-i-fylke">
         <thead>
             <tr>
