--- a/twig/TotaloverisktVideresendingFylke/rapport.html.twig
+++ b/twig/TotaloverisktVideresendingFylke/rapport.html.twig
@@ -56,7 +56,7 @@
     </table>
 
 
-    {% set totalInnslag = totalInnslag + totalInnslag %}
+    {% set superTotalInnslag = superTotalInnslag + totalInnslag %}
     {% set superTotalUnikeDeltakere = superTotalUnikeDeltakere + totalUnikeDeltakere %}
     {% set superTotalLedere = superTotalLedere + totalLedere %}
     {% set superTotalLedsagerTurister = superTotalLedsagerTurister + totalLedsagerTurister %}
