--- a/twig/TotaloverisktVideresendingFylke/rapport.html.twig
+++ b/twig/TotaloverisktVideresendingFylke/rapport.html.twig
@@ -64,7 +64,7 @@
 
 
 {# TOTALOVERSIKT FOR ALLE VIDERESENDINGER TIL DETTE ARRANGEMENTET #}
-    <h3 class="super-total-oversikt">SUM FOR ALLE FYLKER</h3>
+    <h3 class="super-total-oversikt">SUM FOR UTVALGTE FYLKER</h3>
      <table class="table total-oversikt total-i-fylke">
         <thead>
             <tr>
